[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/git_for_godot/commit_dock/commit_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/git_for_godot/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/git_for_godot/commit_dock/stage_status.gd" type="Script" id=3]

[node name="Commit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -724.0
margin_bottom = -400.0
rect_min_size = Vector2( 320, 200 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageStatus" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 22.0
text = "No changes, working tree clean."
script = ExtResource( 3 )

[node name="StageManagement" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 30 )

[node name="Stage" type="Button" parent="VBoxContainer/StageManagement"]
margin_right = 94.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Stage All"

[node name="Unstage" type="Button" parent="VBoxContainer/StageManagement"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Unstage All"

[node name="Discard" type="Button" parent="VBoxContainer/StageManagement"]
margin_left = 196.0
margin_right = 320.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Discard Unstaged"

[node name="CommitName" type="LineEdit" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 320.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 30 )
max_length = 70
placeholder_text = "Commit name here"

[node name="CommitDescription" type="TextEdit" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="CommitButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 320.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 30 )

[node name="Commit" type="Button" parent="VBoxContainer/CommitButtons"]
margin_right = 242.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Commit changes"

[node name="Amend" type="CheckBox" parent="VBoxContainer/CommitButtons"]
margin_left = 246.0
margin_right = 320.0
margin_bottom = 30.0
text = "Amend"
[connection signal="pressed" from="VBoxContainer/StageManagement/Stage" to="." method="_on_Stage_pressed"]
[connection signal="pressed" from="VBoxContainer/StageManagement/Unstage" to="." method="_on_Unstage_pressed"]
[connection signal="pressed" from="VBoxContainer/StageManagement/Discard" to="." method="_on_Discard_pressed"]
[connection signal="pressed" from="VBoxContainer/CommitButtons/Commit" to="." method="_on_Commit_pressed"]
[connection signal="pressed" from="VBoxContainer/CommitButtons/Amend" to="." method="_on_Amend_pressed"]
